[package]
name = "paenkodb"
version = "0.2.0"
authors = ["kper <kevp.per@gmail.com>"]

[dependencies]
#raft ={ path="../raft-rs", branch="dev"}
raft ={ git="https://github.com/paenko/raft-rs", branch="master"}
env_logger = "*"
bincode ="0.6"
capnp = "0.6"
capnp-nonblock = "0.3"
log = "0.3"
docopt ="*"
iron ="0.5.0"
router ="*"
params ="*"
bodyparser= "0.5.0"
toml = {version="0.2",features=["serde"],default-features=false}
lazy_static ="0.1.*"
mio = "0.5"
serde_derive="0.8"
serde ="0.8"
serde_json ="0.8"
uuid = {version="0.3",features=["serde","v4"]}
rustc-serialize = "*"
iron-sessionstorage = "0.6.6"
base64 = "0.4.0"

[dev-dependencies]
tempdir = "0.3"
